
add_library(Core STATIC Core/Application.cpp Core/Input.cpp)
target_link_libraries(Core glfw)
include_directories(./ ../Dependencies/glfw/include/)

find_package(Vulkan REQUIRED)
if(Vulkan_FOUND)
    target_link_libraries(Core ${Vulkan_LIBRARIES})
    include_directories(${Vulkan_INCLUDE_DIRS})
    message("Vulkan found. Using Vulkan libraries.")
else(Vulkan_FOUND)
    find_package(OpenGL REQUIRED)
    if(OPENGL_OpenGL_FOUND)
        target_link_libraries(Core ${OPENGL_LIBRARIES})
        include_directories(${OPENGL_INCLUDE_DIRS})
        message("OpenGL found. Using OpenGL")
    else(OPENGL_OpenGL_FOUND)
        message("VENGE only supports Vulkan or OpenGL right now, both of which are apparently missing. Please get the Vulkan SDK (more preferable) or OpenGL.")
    endif(OPENGL_OpenGL_FOUND)
endif(Vulkan_FOUND)
